--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 							  		<div class="ps-block--site-features">
 							  			<div class="ps-block__item">
 							  				<div class="ps-block__left">
-							  					<i class="icon-rocket"></i>
+												<i class='bx bxs-truck'></i>
 							  				</div>
 							  				<div class="ps-block__right">
 							  					<h4>Free Delivery</h4>
@@ -1127,7 +1127,7 @@
 							  			</div>
 							  			<div class="ps-block__item">
 							  				<div class="ps-block__left">
-							  					<i class="icon-sync"></i>
+												<i class='bx bx-sync'></i>
 							  				</div>
 							  				<div class="ps-block__right">
 							  					<h4>90 Days Return</h4>
@@ -1136,7 +1136,7 @@
 							  			</div>
 							  			<div class="ps-block__item">
 							  				<div class="ps-block__left">
-							  					<i class="icon-credit-card"></i>
+												<i class='bx bx-credit-card'></i>
 							  				</div>
 							  				<div class="ps-block__right">
 							  					<h4>Secure Payment</h4>
@@ -1145,7 +1145,7 @@
 							  			</div>
 							  			<div class="ps-block__item">
 							  				<div class="ps-block__left">
-							  					<i class="icon-bubbles"></i>
+												<i class='bx bx-conversation'></i>
 							  				</div>
 							  				<div class="ps-block__right">
 							  					<h4>24/7 Support</h4>
@@ -1154,7 +1154,7 @@
 							  			</div>
 							  			<div class="ps-block__item">
 							  				<div class="ps-block__left">
-							  					<i class="icon-gift"></i>
+												<i class='bx bx-gift'></i>
 							  				</div>
 							  				<div class="ps-block__right">
 							  					<h4>Gift Service</h4>
