--- a/login.html
+++ b/login.html
@@ -760,7 +760,7 @@
 		<!-- Main Container  -->
 		<div class="main-container container">
 			<ul class="breadcrumb">
-				<li><a href="#"><i class="fa fa-home"></i></a></li>
+				<li><a href="index.html"><i class="fa fa-home"></i></a></li>
 				<li><a href="#">Account</a></li>
 				<li><a href="#">Login</a></li>
 			</ul>
@@ -811,7 +811,7 @@
 		<!-- //Main Container -->
 	
 		<!-- Footer Container -->
-		<footer class="footer-container type_footer1">
+		<footer class="footer-container">
 			<!-- Footer Top Container -->
 			<section class="footer-top">
 				<div class="container content">
@@ -950,7 +950,6 @@
 											</div>
 											<!-- /mobile nav -->
 										</div>
-										<div class="scrollTop" onclick="scrollToTop()"></div>
 										<!-- Include Libs & Plugins
 										============================================ -->
 										<script type="text/javascript" src="assets/js/jquery-2.2.4.min.js"></script>
