--- a/quickview.html
+++ b/quickview.html
@@ -17,9 +17,9 @@
 		<link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
 		<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">	
 		<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-		<link href="assets/js/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
 	    <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet">
 		<link href="css/themecss/lib.css" rel="stylesheet">
+	    <link href="css/theme.css" rel="stylesheet">
 		<link href="assets/js/jquery-ui/jquery-ui.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
 
@@ -29,11 +29,7 @@
 
 				<!-- Theme CSS
 		============================================ -->
-	   	<link href="css/themecss/so_megamenu.css" rel="stylesheet">
-	    <link href="css/themecss/so-categories.css" rel="stylesheet">
-		<link href="css/themecss/so-listing-tabs.css" rel="stylesheet">
 		<link href="css/responsive.css" rel="stylesheet">
-
 	</head>	
 
 
@@ -73,7 +69,7 @@
 
 							 <div class="content-product-right col-sm-6 col-xs-12">
 								 <div class="title-product">
-									 <h1>Brown Itallian Leather Bag</h1>
+									 <h1>Keepall Bandoulière 50</h1>
 								 </div>
 								 <!-- Review ---->
 								 <div class="box-review form-group">
@@ -86,22 +82,22 @@
 											 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
 										 </div>
 									 </div>
-									 <a class="reviews_button" href="quickview.php.html" onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">0 reviews </a>	
+									 <a class="reviews_button" href="quickview.html" onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">0 reviews </a>	
 								 </div>
 
 								 <div class="product-label form-group">
 									 <div class="product_page_price price" itemprop="offerDetails" itemscope="" itemtype="http://data-vocabulary.org/Offer">
-										 <span class="price-new" itemprop="price">$114.00 </span>
-										 <span class="price-old">$122.00 </span>
+										 <span class="price-new" itemprop="price">N11400.00 </span>
+										 <span class="price-old">N12200.00 </span>
 									 </div>
 									 <div class="stock"><span>Availability: </span>  <span class="status-stock">In Stock </span></div>
 								 </div>
 
 								 <div class="product-box-desc">
 									 <div class="inner-box-desc">
-										 <div class="price-tax"><span>Ex Tax: </span> $60.00 </div>
+										 <div class="price-tax"><span>Ex Tax: </span> N600.00 </div>
 										 <div class="reward"><span>Price in reward points: </span> 400 </div>
-										 <div class="brand"><span>Brand: </span><a href="#">Apple </a>		 </div>
+										 <div class="brand"><span>Brand: </span><a href="#">Louis Vuitton </a>		 </div>
 										 <div class="model"><span>Product Code: </span> Product 15 </div>
 										 <div class="reward"><span>Reward Points: </span> 100 </div>
 									 </div>
@@ -116,20 +112,20 @@
 											 <li class="radio">
 												 <label>
 													 <input class="image_radio" type="radio" name="option[231]" value="33" /> 
-													 <img src="image/demo/colors/blue.jpg" data-original-title="blue +$12.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
+													 <img src="images/products/blue.jpg" data-original-title="blue +N12000.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
 													 <label>  </label>
 												 </label>
 											 </li>
 											 <li class="radio">
 												 <label>
 													 <input class="image_radio" type="radio" name="option[231]" value="34" /> 
-													 <img src="image/demo/colors/brown.jpg" data-original-title="brown -$12.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
+													 <img src="images/products/black.jpg" data-original-title="black +N12000.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
 													 <label>  </label>
 												 </label>
 											 </li>
 											 <li class="radio">
 												 <label>
-													 <input class="image_radio" type="radio" name="option[231]" value="35" />  <img src="image/demo/colors/green.jpg" data-original-title="green +$12.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
+													 <input class="image_radio" type="radio" name="option[231]" value="35" />  <img src="images/products/red.jpg" data-original-title="red +N12000.00" class="img-thumbnail icon icon-color" />				 <i class="fa fa-check"></i>
 													 <label>  </label>
 												 </label>
 											 </li>
@@ -142,16 +138,16 @@
 										 <label class="control-label">Checkbox </label>
 										 <div id="input-option232">
 											 <div class="checkbox">
-												 <label><input type="checkbox" name="option[232][]" value="36" /> Checkbox 1 (+$12.00)  </label>
+												 <label><input type="checkbox" name="option[232][]" value="36" /> Checkbox 1 (+N12000.00)  </label>
 											 </div>
 											 <div class="checkbox">
-												 <label><input type="checkbox" name="option[232][]" value="37" /> Checkbox 2 (+$36.00)  </label>
+												 <label><input type="checkbox" name="option[232][]" value="37" /> Checkbox 2 (+N36000.00)  </label>
 											 </div>
 											 <div class="checkbox">
-												 <label><input type="checkbox" name="option[232][]" value="38" /> Checkbox 3 (+$24.00)  </label>
+												 <label><input type="checkbox" name="option[232][]" value="38" /> Checkbox 3 (+N24000.00)  </label>
 											 </div>
 											 <div class="checkbox">
-												 <label><input type="checkbox" name="option[232][]" value="39" /> Checkbox 4 (+$48.00)  </label>
+												 <label><input type="checkbox" name="option[232][]" value="39" /> Checkbox 4 (+N48000.00)  </label>
 											 </div>
 										 </div>
 									 </div>
@@ -185,7 +181,6 @@
 									 </div>
 
 								 </div>
-								 <!-- end box info product -->
 
 							 </div>
 						 </div>
@@ -198,18 +193,18 @@
 					// Cart add remove functions
 					var cart = {
 						'add': function(product_id, quantity) {
-							parent.addProductNotice('Product added to Cart', '<img src="image/demo/shop/product/e11.jpg" alt="">', '<h3><a href="#">Apple Cinema 30"</a> added to <a href="#">shopping cart</a>!</h3>', 'success');
+							parent.addProductNotice('Product added to Cart', '<img src="assets/images/bag.jpg" alt="">', '<h3><a href="#">Brown Itallian Leather Bag"</a> added to <a href="#">shopping cart</a>!</h3>', 'success');
 						}
 					}
 
 					var wishlist = {
 						'add': function(product_id) {
-							parent.addProductNotice('Product added to Wishlist', '<img src="image/demo/shop/product/e11.jpg" alt="">', '<h3>You must <a href="#">login</a>  to save <a href="#">Apple Cinema 30"</a> to your <a href="#">wish list</a>!</h3>', 'success');
+							parent.addProductNotice('Product added to Wishlist', '<img src="assets/images/bag.jpg" alt="">', '<h3>You must <a href="#">login</a>  to save <a href="#">Brown Itallian Leather Bag"</a> to your <a href="#">wish list</a>!</h3>', 'success');
 						}
 					}
 					var compare = {
 						'add': function(product_id) {
-							parent.addProductNotice('Product added to compare', '<img src="image/demo/shop/product/e11.jpg" alt="">', '<h3>Success: You have added <a href="#">Apple Cinema 30"</a> to your <a href="#">product comparison</a>!</h3>', 'success');
+							parent.addProductNotice('Product added to compare', '<img src="assets/images/bag.jpg" alt="">', '<h3>Success: You have added <a href="#">Brown Itallian Leather Bag"</a> to your <a href="#">product comparison</a>!</h3>', 'success');
 						}
 					}
 
@@ -221,23 +216,9 @@
 			
 			
 		 </div>
-		 <!--Middle Part End-->
 	 </div>
-	 <!-- //Main Container -->
 	
- <style type="text/css">
-	#wrapper{box-shadow:none;}
-	#wrapper > *:not(.main-container){display: none;}
-	#content{margin:0}
-	.container{width:100%;}
-	
-	.product-info .product-view,.left-content-product,.box-info-product{margin:0;}
-	.left-content-product .content-product-right .box-info-product .cart input{padding:12px 16px;}
-
-	.left-content-product .content-product-right .box-info-product .add-to-links{ width: auto;  float: none; margin-top: 0px; clear:none; }
-	.add-to-links ul li{margin:0;}
-	
-</style></div>
+</div>
 
 
 
@@ -247,21 +228,13 @@
 		<script type="text/javascript" src="assets/js/jquery-2.2.4.min.js"></script>
 		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.js"></script>
-		<script type="text/javascript" src="assets/js/themejs/libs.js"></script>
-		<script type="text/javascript" src="assets/js/unveil/jquery.unveil.js"></script>
-		<script type="text/javascript" src="assets/js/countdown/jquery.countdown.min.js"></script>
-		<script type="text/javascript" src="assets/js/dcjqaccordion/jquery.dcjqaccordion.2.8.min.js"></script>
-		<script type="text/javascript" src="assets/js/datetimepicker/moment.js"></script>
-		<script type="text/javascript" src="assets/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-		<script type="text/javascript" src="assets/js/jquery-ui/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="assets/js/modernizr/modernizr-2.6.2.min.js"></script>		
+		<script type="text/javascript" src="assets/js/themejs/libs.js"></script>	
 
 
 		<!-- Theme files
-		============================================ -->
+		============================================ -->				
 		<script type="text/javascript" src="assets/js/themejs/application.js"></script>
-		<script type="text/javascript" src="assets/js/themejs/main.js"></script><!-- 
-		<script type="text/javascript" src="assets/js/themejs/so_megamenu.js"></script>
-		<script type="text/javascript" src="assets/js/themejs/addtocart.js"></script>	 -->
+		<script type="text/javascript" src="assets/js/themejs/main.js"></script>
+		<script type="text/javascript" src="assets/js/themejs/addtocart.js"></script>	
     </body>
 </html>
