--- a/register.html
+++ b/register.html
@@ -767,7 +767,7 @@
 	<div class="main-container container">
 		<ul class="breadcrumb">
 			<li><a href="index.html"><i class="fa fa-home"></i></a></li>
-			<li><a href="account.htmk">Account</a></li>
+			<li><a href="#">Account</a></li>
 			<li><a href="#">Register</a></li>
 		</ul>
 		
