--- a/delivery.html
+++ b/delivery.html
@@ -798,7 +798,7 @@
 						<div class="ps-delivery_fee">
 							<figure><small>Dispatch</small><strong>#2500.00</strong></figure>
 						</div>
-					    <div class="ps-form__submit">
+					    <div class="ps-form__submit delivery-footer">
                             <a href="checkout.html">
                                 <i class='bx bx-arrow-back mr-3'></i>Return to Checkout
                             </a>
