--- a/login.html
+++ b/login.html
@@ -781,23 +781,23 @@
 									</div>
 								</div>
 								
-								<form action="#" method="post" enctype="multipart/form-data">
+								<form action="index.html" method="post" enctype="multipart/form-data">
 									<div class="col-sm-6 customer-login">
 										<div class="well">
 											<h2><i class="fa fa-user" aria-hidden="true"></i> Returning Customer</h2>
 											<p><strong>I am a returning customer</strong></p>
 											<div class="form-group">
 												<label class="control-label " for="input-email">E-Mail Address</label>
-												<input type="text" name="email" value="" id="input-email" class="form-control" />
+												<input type="text" name="email" value="" id="input-email" class="form-control" required/>
 											</div>
 											<div class="form-group">
 												<label class="control-label " for="input-password">Password</label>
-												<input type="password" name="password" value="" id="input-password" class="form-control" />
+												<input type="password" name="password" value="" id="input-password" class="form-control" required/>
 											</div>
 										</div>
 										<div class="bottom-form">
 											<a href="#" class="forgot">Forgotten Password</a>
-											<input type="submit" value="Login" class="btn btn-default pull-right" />
+											<button type="submit" value="" class="pull-right ps-btn " onclick="login.add('42')">Login</button>
 										</div>
 									</div>
 								</form>
