--- a/checkout.html
+++ b/checkout.html
@@ -595,13 +595,13 @@
                                             <div class="mega-menu__column">
                                                 <ul class="mega-menu__list">
                                                     <li class="mb-2">
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class="bx bx-info-circle" style=></i>
                                                         <p>General Information</p>
                                                        </a>
                                                     </li>
                                                     <li >
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class='bx bx-gift'></i>
                                                         <p>Orders</p>
                                                        </a>
@@ -611,13 +611,13 @@
                                             <div class="mega-menu__column ">
                                                 <ul class="mega-menu__list">
                                                     <li class="mb-2">
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class='bx bxs-truck'></i>
                                                         <p>Delivery</p>
                                                        </a>
                                                     </li>
                                                     <li >
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class="bx bx-credit-card"></i>
                                                         <p>Payments & Gift cards</p>
                                                        </a>
@@ -627,13 +627,13 @@
                                             <div class="mega-menu__column">
                                                 <ul class="mega-menu__list">
                                                     <li class="mb-2">
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class='bx bx-revision'></i>
                                                         <p>Returns & Refunds</p>
                                                        </a>
                                                     </li>
                                                     <li >
-                                                        <a href="" class="customer-service_icons">
+                                                        <a href="" class="bx-icons">
                                                         <i class="fas fa-gear"></i>
                                                         <p>Technical</p>
                                                        </a>
