--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 									</li>
 									<li class="menu-item-has-children dropdown">
 										<a href="/" class="keychainify-checked">Gift Box<i class="bx bx-chevron-down"></i></a>
-										<ul class="sub-menu">
+										<!-- <ul class="sub-menu">
 											<li class="menu-item-has-children dropdown">
 												<a href="/" class="keychainify-checked">Marketplace Full Width</a>
 											</li>
@@ -713,7 +713,7 @@
 											<li class="menu-item-has-children dropdown">
 												<a href="/home/furniture" class="keychainify-checked">Home Furniture</a>
 											</li>
-										</ul>
+										</ul> -->
 									</li>
 							</ul>
 							<ul class="navigation__extra">
