--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
 								 </div>
 							  </div>
 
-							  <div class="ps-site-features">
+							  <!-- <div class="ps-site-features">
 							  	<div class="ps-container">
 							  		<div class="ps-block--site-features">
 							  			<div class="ps-block__item">
@@ -1190,7 +1190,7 @@
 							  			</div>
 							  		</div>
 							  	</div>
-							  </div>
+							  </div> -->
 
 								<div class="module container-full home--banner2">
 									<div class="container">
@@ -3432,7 +3432,7 @@
 		        <div class="footer-bottom-block ">
 			<div class=" container">
 				<div class="row">
-					<div class="col-sm-5 copyright-text"> &copy; 2022 — BaLogun. All Rights Reserved. </div>
+					<div class="col-sm-5 copyright-text"> &copy; 2022 BaLogun. All Rights Reserved. || Developed by <a href="https://amivian.github.io/profile" style="color:orange">Vivian</a></div>
 					<div class="col-sm-7">
 						<div class="block-payment text-right"><img src="images/products/payment.png" alt="payment" title="payment methods" ></div>
 					</div>
@@ -3455,15 +3455,15 @@
 							<i class='bx bx-menu'></i>
 							<span> Menu</span>
 						</a>
-						<a class="navigation__item ">
+						<a class="navigation__item " href="login.html">
 							<i class="bx bx-bar-chart-square"></i>
-							<span> Categories</span>
+							<span> Login</span>
 						</a>
-						<a class="navigation__item ">
+						<a class="navigation__item " href="register.html">
 							<i class='bx bx-search-alt-2'></i>
-							<span> Search</span>
+							<span> Register</span>
 						</a>
-						<a class="navigation__item ">
+						<a class="navigation__item " href="cart.html">
 							<i class='bx bx-basket'></i>
 							<span> Cart</span>
 						</a>
