--- a/login.html
+++ b/login.html
@@ -912,43 +912,49 @@
 												</section>
 												<!-- /Footer Top Container -->
 												
-												<!-- Footer Bottom Container -->
-												<div class="footer-bottom-block ">
-													<div class=" container">
-														<div class="row">
-															<div class="col-sm-5 copyright-text"> &copy; 2022 — BaLogun. All Rights Reserved. </div>
-															<div class="col-sm-7">
-																<div class="block-payment text-right"><img src="images/products/payment.png" alt="payment" title="payment methods" ></div>
-															</div>
-															<!--Back To Top-->
-														</div>
-													</div>
-												</div>
-												<!-- /Footer Bottom Container -->
-											</footer>
-											<!-- //end Footer Container -->
-											<!-- mobile nav -->
-											<div class="navigation--list">
-												<div class="navigation__content">
-													<a class="navigation__item ">
-														<i class='bx bx-menu'></i>
-														<span> Menu</span>
-													</a>
-													<a class="navigation__item ">
-														<i class="bx bx-bar-chart-square"></i>
-														<span> Categories</span>
-													</a>
-													<a class="navigation__item ">
-														<i class='bx bx-search-alt-2'></i>
-														<span> Search</span>
-													</a>
-													<a class="navigation__item ">
-														<i class='bx bx-basket'></i>
-														<span> Cart</span>
-													</a>
-												</div>
-											</div>
-											<!-- /mobile nav -->
+												 <!-- Footer Bottom Container -->
+		        <div class="footer-bottom-block ">
+					<div class=" container">
+						<div class="row">
+							<div class="col-sm-5 copyright-text"> &copy; 2022 BaLogun. All Rights Reserved. || Developed by <a href="https://amivian.github.io/profile" style="color:orange">Vivian</a></div>
+							<div class="col-sm-7">
+								<div class="block-payment text-right"><img src="images/products/payment.png" alt="payment" title="payment methods" ></div>
+							</div>
+							<!--Back To Top-->
+						</div>
+					</div>
+						   </div>
+						  <!-- /Footer Bottom Container -->
+						</footer>
+				   <!-- //end Footer Container -->
+		
+				  <div id="loader-wrapper">
+					<div class="loader-section section-left"></div>
+					<div class="loader-section section-right"></div>
+				 </div>
+					<!-- mobile nav -->
+						<div class="navigation--list">
+							<div class="navigation__content">
+								<a class="navigation__item ">
+									<i class='bx bx-menu'></i>
+									<span> Menu</span>
+								</a>
+								<a class="navigation__item " href="login.html">
+									<i class="bx bx-bar-chart-square"></i>
+									<span> Login</span>
+								</a>
+								<a class="navigation__item " href="register.html">
+									<i class='bx bx-search-alt-2'></i>
+									<span> Register</span>
+								</a>
+								<a class="navigation__item " href="cart.html">
+									<i class='bx bx-basket'></i>
+									<span> Cart</span>
+								</a>
+							</div>
+						   </div>
+					   <!-- /mobile nav -->
+				 </div>
 										</div>
 										<!-- Include Libs & Plugins
 										============================================ -->
